--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To do list</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
-</head>
-<body>
-    <div class="container">
-
-        <aside class="Sidebar">
-            <div class="Menu">
-                <span class="material-symbols-outlined">
-                    menu
-                </span>
-                <h2 class="menu-heading">Menu</h2>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="main-container">
+      <!-- Menu area -->
+      <aside class="menu-sidebar">
+        <div class="menu">
+          <span class="material-symbols-outlined"> menu </span>
+          <h2 class="menu-heading">Menu</h2>
+        </div>
+        <!-- Search area -->
+        <div class="search-area">
+          <div class="search-wrapper">
+            <input placeholder="Search" class="search-box" />
+            <div class="search-btn">
+              <span class="material-symbols-outlined">search</span>
             </div>
-            <div class="Search-area">
-                <input placeholder="Search" class="input-container">
-                <div class="Search-btn">
-                    <span class="material-symbols-outlined">
-                    search
-                    </span>
-                </div>
-            </div>
-
-        </aside>
-        
+          </div>
+        </div>
+        <h3 class="tasks">Tasks</h3>
+      </aside>
     </div>
-    
-</body>
+  </body>
 </html>
